Implement pagination and optimize code in Order Service
- Added pagination support for retrieving order view models by user using the Pageable interface
- Enhanced code consistency and readability by utilizing the toList() stream operator